fixed 1024 res and events on small

--- a/src/components/GlobalHeader.scss
+++ b/src/components/GlobalHeader.scss
@@ -195,7 +195,7 @@
 }
 
 // open sub menu
-@media (min-width: 1036px) {
+@media (min-width: 1024px) {
   .has-children:hover .sub-menu-icon {
     -webkit-transform: rotate(180deg);
     -moz-transform: rotate(180deg);
